[gd_scene load_steps=14 format=3 uid="uid://br70syorjb6sm"]

[ext_resource type="Texture2D" uid="uid://dsg4rx48euiwf" path="res://assets/graphics/barber.png" id="1_fr7ka"]
[ext_resource type="Script" path="res://scripts/barber.gd" id="2_x5t3e"]
[ext_resource type="Script" path="res://objects/boss_attacks/scripts/attacks.gd" id="3_8uo6p"]
[ext_resource type="Script" path="res://objects/boss_attacks/scripts/throw_grenades.gd" id="3_q7urt"]
[ext_resource type="PackedScene" uid="uid://c2vpcqxlbwpob" path="res://objects/eye.tscn" id="6_by5vf"]
[ext_resource type="Script" path="res://objects/boss_attacks/scripts/burst.gd" id="6_mq4vq"]
[ext_resource type="Script" path="res://objects/boss_attacks/scripts/oscillating_burst.gd" id="7_0myb7"]
[ext_resource type="Script" path="res://objects/boss_attacks/scripts/throw_fireworks.gd" id="7_txrn3"]
[ext_resource type="Script" path="res://scripts/head_eye.gd" id="8_ap2wj"]
[ext_resource type="PackedScene" uid="uid://b87fe4eo54si6" path="res://objects/hand.tscn" id="8_nd32p"]

[sub_resource type="Animation" id="Animation_8crhs"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadEye:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.25, -22.5)]
}

[sub_resource type="Animation" id="Animation_gaaxg"]
resource_name = "breathe"
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HeadEye:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2(0.25, -22.5), Vector2(0.25, -21.5), Vector2(0.25, -22.5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ad080"]
_data = {
"RESET": SubResource("Animation_8crhs"),
"breathe": SubResource("Animation_gaaxg")
}

[node name="Barber" type="Sprite2D"]
position = Vector2(4, 4)
scale = Vector2(8, 8)
texture = ExtResource("1_fr7ka")
offset = Vector2(0, 16)
hframes = 2
script = ExtResource("2_x5t3e")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_ad080")
}
autoplay = "breathe"
speed_scale = 0.5

[node name="Attacks" type="Node" parent="."]
script = ExtResource("3_8uo6p")

[node name="ThrowGrenades" type="Node" parent="Attacks"]
script = ExtResource("3_q7urt")

[node name="Burst" type="Node" parent="Attacks"]
script = ExtResource("6_mq4vq")

[node name="OscillatingBurst" type="Node" parent="Attacks"]
script = ExtResource("7_0myb7")

[node name="ThrowFireworks" type="Node" parent="Attacks"]
script = ExtResource("7_txrn3")

[node name="Delay" type="Timer" parent="Attacks"]
one_shot = true

[node name="HeadEye" parent="." instance=ExtResource("6_by5vf")]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
position = Vector2(0.25, -22.5)
scale = Vector2(0.2, 0.2)
script = ExtResource("8_ap2wj")

[node name="LeftHand" parent="." node_paths=PackedStringArray("target_pos") instance=ExtResource("8_nd32p")]
unique_name_in_owner = true
position = Vector2(100.375, -63.375)
target_pos = NodePath("../LeftHandPos")

[node name="RightHand" parent="." node_paths=PackedStringArray("target_pos") instance=ExtResource("8_nd32p")]
unique_name_in_owner = true
position = Vector2(-100, -64)
flip_h = false
target_pos = NodePath("../RightHandPos")

[node name="RightHandPos" type="Marker2D" parent="."]
position = Vector2(-16, -4)

[node name="LeftHandPos" type="Marker2D" parent="."]
position = Vector2(16, -4)

[connection signal="timeout" from="Attacks/Delay" to="Attacks" method="_on_delay_timeout"]
